--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-dropdown-select": "^4.8.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
