--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "emailjs-com": "^3.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.8.3",
+    "react-native-push-notification": "^8.1.1",
+    "react-push-notification": "^1.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
